# dedicare

./: pyproject.toml
dedicare/: __init__.py
