[project]
name = "dedicare"
authors = [
    { name = "Ajay", email = "ajayjogdand374@gmail.com" }
]
description = "Customize solution"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"